上傳w3w7還有webots影片

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,7 @@
 <h1>About</h1>
 <p>課程名稱: 電腦輔助設計與實習</p>
+<p>github:<a href="https://github.com/41323143/CAD-2025-41323143">https://github.com/41323143/CAD-2025-41323143</a></p>
+<p>群組網站:<a href="https://41323143.github.io/CAD-2025-41323143/content/index.html">https://41323143.github.io/CAD-2025-41323143/content/index.html</a></p>
 <p>課程評分:</p>
 <p style="padding-left: 30px;"><span style="background-color: #ffff00;">學習心得報告 (60%)</span> - MS Teams 線上參與，6人一組每三週發表學習心得。</p>
 <p style="padding-left: 60px;">w3、w7、w10、w14、w17、w18</p>
@@ -11,4 +13,286 @@
 <p style="padding-left: 60px;">w17: 如何實作一套 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a>？(<a href="https://la.disneyresearch.com/publication/design-and-control-of-a-bipedal-robotic-character/">Disney Bipedal Robot</a>)</p>
 <p style="padding-left: 60px;">w18: 課程總結</p>
 <p style="padding-left: 30px;"><span style="background-color: #ffff00;">個人與分組網站維護 (40%)</span> - 每週至少兩次推送與課程進度相關的學習內容與心得。</p>
-<p style="padding-left: 60px;">w9 期中自評、w18 期末自評test</p>
+<p style="padding-left: 60px;">w9 期中自評、w18 期末自評</p><h1>w3</h1>
+<p><span>用什麼套件完成 </span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span> 與 </span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span> 零組件設計繪圖？ </span><a href="https://solvespace.com/">Solvespace</a><span>, </span><a href="https://plm.sw.siemens.com/en-US/nx/cad-online/">Siemens NX</a><span>, </span><a href="https://www.onshape.com/en/">Onshape</a><span> 或其他？各有什麼優缺點？ (</span><a href="https://mde.tw/cad2025/downloads/plotter.7z">plotter.7z</a><span>, </span><a href="https://41323122.github.io/Team/downloads/open_duck_mini.7z">open_duck_mini.7z</a><span>)</span></p>
+<p><span></span></p>
+<p>我們這組選擇使用 Onshape 來進行繪製 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span><span> </span>零組件設計繪圖</span>，主要原因是它是一個雲端 CAD 平台，不需要安裝軟體即可透過網頁操作。Onshape 最大的優點是 即時協作，小組成員可以同時在線上編輯同一個檔案，彼此的修改會立即同步，避免了傳統 CAD 軟體需要反覆傳檔、合併的麻煩。這對於團隊合作特別有幫助，因為大家能在同一個工作環境中看到零組件的最新狀態，快速分工並組裝整體模型</p>
+<p><b>SolveSpace</b><b>、</b><b>Siemens NX</b><b>、</b><b>Onshape</b><b>優缺點整理</b></p>
+<table style="width: 573.688px;">
+<tbody>
+<tr>
+<td style="width: 49px;">
+<p>特性</p>
+</td>
+<td style="width: 157px;">
+<p><b>SolveSpace</b></p>
+</td>
+<td style="width: 186px;">
+<p><b>Siemens NX</b></p>
+</td>
+<td style="width: 156.688px;">
+<p><b>Onshape</b></p>
+</td>
+</tr>
+<tr>
+<td style="width: 49px;">
+<p><b>定位<span> </span></b><b>/<span> </span></b><b>族群</b></p>
+</td>
+<td style="width: 157px;">
+<p>開源、免費，適合個人、教學、小型設計專案</p>
+</td>
+<td style="width: 186px;">
+<p>工業級 CAD/CAM/CAE，企業與大型產品開發</p>
+</td>
+<td style="width: 156.688px;">
+<p>雲端 SaaS CAD，適合團隊協作與中小型專案</p>
+</td>
+</tr>
+<tr>
+<td style="width: 49px;">
+<p><b>成本<span> </span></b><b>/<span> </span></b><b>授權</b></p>
+</td>
+<td style="width: 157px;">
+<p>免費、開源</p>
+</td>
+<td style="width: 186px;">
+<p>高昂授權費</p>
+</td>
+<td style="width: 156.688px;">
+<p>訂閱制，有免費教育版</p>
+</td>
+</tr>
+<tr>
+<td style="width: 49px;">
+<p><b>安裝<span> </span></b><b>/<span> </span></b><b>執行</b></p>
+</td>
+<td style="width: 157px;">
+<p>桌面應用，跨平台（Win / macOS / Linux）</p>
+</td>
+<td style="width: 186px;">
+<p>桌面應用，需要高效能工作站</p>
+</td>
+<td style="width: 156.688px;">
+<p>免安裝，瀏覽器 / App 即可</p>
+</td>
+</tr>
+<tr>
+<td style="width: 49px;">
+<p><b>學習曲線</b></p>
+</td>
+<td style="width: 157px;">
+<p>中等，界面簡單但不直觀</p>
+</td>
+<td style="width: 186px;">
+<p>陡峭，功能龐雜、操作複雜</p>
+</td>
+<td style="width: 156.688px;">
+<p>較平緩，上手容易，界面現代</p>
+</td>
+</tr>
+<tr>
+<td style="width: 49px;">
+<p><b>核心功能</b></p>
+</td>
+<td style="width: 157px;">
+<p>參數建模、2D/3D 繪圖、簡單機構模擬</p>
+</td>
+<td style="width: 186px;">
+<p>參數建模、曲面建模、裝配、CAE、CAM、PLM 整合</p>
+</td>
+<td style="width: 156.688px;">
+<p>參數建模、裝配、工程圖、版本控制</p>
+</td>
+</tr>
+<tr>
+<td style="width: 49px;">
+<p><b>效能需求</b></p>
+</td>
+<td style="width: 157px;">
+<p>低，可在舊電腦運行</p>
+</td>
+<td style="width: 186px;">
+<p>高，需要專業硬體</p>
+</td>
+<td style="width: 156.688px;">
+<p>中等，主要依賴網路與伺服器</p>
+</td>
+</tr>
+<tr>
+<td style="width: 49px;">
+<p><b>優點</b></p>
+</td>
+<td style="width: 157px;">
+<p>免費、輕量、跨平台、快速原型</p>
+</td>
+<td style="width: 186px;">
+<p>功能最全、精度高、適合複雜產品開發</p>
+</td>
+<td style="width: 156.688px;">
+<p>雲端協作強、跨平台、易用、版本管理完善</p>
+</td>
+</tr>
+<tr>
+<td style="width: 49px;">
+<p><b>缺點</b></p>
+</td>
+<td style="width: 157px;">
+<p>功能有限、不穩定、界面不直觀</p>
+</td>
+<td style="width: 186px;">
+<p>成本高、學習曲線陡、操作繁瑣</p>
+</td>
+<td style="width: 156.688px;">
+<p>雲端依賴、功能不及 NX、長期訂閱成本</p>
+<p></p>
+</td>
+</tr>
+</tbody>
+</table>
+<h1>w7</h1>
+<h4 style="text-align: left;"><span style="color: #000000;"><span>w7 (</span><span>2a 採 Youtube 影片簡報</span><span>):<span> </span></span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span> 零組件設計繪製完成之後，如何切割零件? 為何要切割零件？ 如何利用<span> </span></span><a href="https://cyberbotics.com/">Webots</a><span><span> </span>進行後續的控制系統設計與動態模擬 (Dynamic Simulation)？(</span><a href="https://mde.tw/cad2025/downloads/plotter_project.7z">plotter_project.7z</a><span>)</span></span></h4>
+<p><img alt="" height="325" src="/images/螢幕擷取畫面 2025-12-26 142840.png" width="579"/></p>
+<p><img alt="" height="324" src="/images/螢幕擷取畫面 2025-12-26 143404.png" width="576"/></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/i10VcLcqiTs" title="webots畫蘋果" width="963"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/1iKOxAbuyb8" title="webots 畫cat和dog" width="963"></iframe>蘋果描邊</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">"""draw_apple_supervisor controller."""
+
+from controller import Supervisor
+import cv2
+import numpy as np
+import math
+
+# ----------------- 固定參數 (米) -----------------
+L1, L2, L3, L4, L5 = 0.20, 0.27, 0.27, 0.20, 0.20
+Ex = L5  # E 點的 x 座標 (0.2)
+
+# 目標圓心與半徑
+target_center = np.array([0.1, 0.3])
+target_radius = 0.1
+N_POINTS = 50
+
+# ----------------- 反解函式 -----------------
+def ik(cx: float, cy: float) -&gt; tuple:
+    L_AC_sq = cx**2 + cy**2
+    L_AC = math.sqrt(L_AC_sq)
+    if L_AC &gt; (L1 + L2) or L_AC &lt; abs(L1 - L2) or L_AC == 0:
+        return (None, None)
+    alpha = math.atan2(cy, cx)
+    cos_beta1 = (L1**2 + L_AC_sq - L2**2) / (2 * L1 * L_AC)
+    cos_beta1 = np.clip(cos_beta1, -1.0, 1.0)
+    beta1 = math.acos(cos_beta1)
+    sigma1 = 1
+    t1 = alpha + sigma1 * beta1
+
+    dx, dy = cx - Ex, cy
+    L_EC_sq = dx**2 + dy**2
+    L_EC = math.sqrt(L_EC_sq)
+    if L_EC &gt; (L4 + L3) or L_EC &lt; abs(L4 - L3) or L_EC == 0:
+        return (None, None)
+    gamma = math.atan2(dy, dx)
+    cos_beta2 = (L4**2 + L_EC_sq - L3**2) / (2 * L4 * L_EC)
+    cos_beta2 = np.clip(cos_beta2, -1.0, 1.0)
+    beta2 = math.acos(cos_beta2)
+    sigma2 = -1
+    t2 = gamma + sigma2 * beta2
+
+    t1_rad = t1 % (2 * math.pi)
+    t2_rad = t2 % (2 * math.pi)
+    return math.degrees(t1_rad), math.degrees(t2_rad)
+
+# ----------------- 蘋果輪廓處理 -----------------
+def load_apple_points(image_path, N_points=100):
+    img = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)
+    if img is None:
+        print(f"Error: 無法讀取圖片 {image_path}")
+        exit(1)
+    _, binary = cv2.threshold(img, 200, 255, cv2.THRESH_BINARY_INV)
+    contours, _ = cv2.findContours(binary, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)
+    if not contours:
+        print("Error: 找不到輪廓")
+        exit(1)
+    main_contour = max(contours, key=cv2.contourArea)
+    if len(main_contour) &gt; N_points:
+        indices = np.linspace(0, len(main_contour) - 1, N_points, dtype=int)
+        sampled = main_contour[indices]
+    else:
+        sampled = main_contour
+    pts = sampled[:, 0, :]
+    h, w = binary.shape
+    pts[:, 1] = h - pts[:, 1]
+    center = np.mean(pts, axis=0)
+    pts_centered = pts - center
+    scale = np.max(np.linalg.norm(pts_centered, axis=1))
+    pts_normalized = pts_centered / scale
+    pts_scaled = pts_normalized * target_radius + target_center
+    return pts_scaled
+
+# ----------------- IndexedLineSet 字串生成 -----------------
+def generate_indexed_line_set(points):
+    point_str = ",\n      ".join([f"{x:.5f} {y:.5f} 0.001" for x, y in points])
+    indices = ", ".join([str(i) for i in range(len(points))]) + ", 0"  # 形成封閉線條
+    node_str = f"""
+DEF APPLE_SHAPE Shape {{
+  appearance Appearance {{
+    material Material {{
+      diffuseColor 1 0 0
+      emissiveColor 1 0 0
+    }}
+  }}
+  geometry IndexedLineSet {{
+    coord Coordinate {{
+      point [
+        {point_str}
+      ]
+    }}
+    coordIndex [
+      {indices}
+    ]
+  }}
+}}
+"""
+    return node_str
+
+# ----------------- 主流程 -----------------
+def main():
+    robot = Supervisor()
+    timestep = int(robot.getBasicTimeStep())
+
+    # 載入輪廓點
+    apple_points = load_apple_points("apple-clip-art.jpg", N_points=N_POINTS)
+
+    # 建立 IndexedLineSet 串接綠線
+    root = robot.getRoot()
+    children_field = root.getField("children")
+    line_node = generate_indexed_line_set(apple_points)
+    children_field.importMFNodeFromString(-1, line_node)
+
+    # 取得馬達
+    t1 = robot.getDevice("t1")
+    t2 = robot.getDevice("t2")
+    t1.setVelocity(5.0)
+    t2.setVelocity(5.0)
+    deg = math.pi / 180
+    t1_offset = -90
+    t2_offset = -17.9
+
+    # 畫圖：依序移動到每個輪廓點
+    for (x, y) in apple_points:
+        t1_deg, t2_deg = ik(x, y)
+        if t1_deg is None or t2_deg is None:
+            print(f"點 ({x:.3f}, {y:.3f}) 超出可達範圍，略過")
+            continue
+        t1_rad = (t1_deg + t1_offset) * deg
+        t2_rad = (t2_deg + t2_offset) * deg
+        t1.setPosition(t1_rad)
+        t2.setPosition(t2_rad)
+
+        # 簡單延遲讓 plotter 有時間移動
+        for _ in range(5):
+            if robot.step(timestep) == -1:
+                return
+        print(f"描點: ({x:.3f}, {y:.3f})")
+
+if __name__ == "__main__":
+    main()</pre>
+<p></p>
