--- a/config/content.htm
+++ b/config/content.htm
@@ -13,7 +13,8 @@
 <p style="padding-left: 60px;">w17: 如何實作一套 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a>？(<a href="https://la.disneyresearch.com/publication/design-and-control-of-a-bipedal-robotic-character/">Disney Bipedal Robot</a>)</p>
 <p style="padding-left: 60px;">w18: 課程總結</p>
 <p style="padding-left: 30px;"><span style="background-color: #ffff00;">個人與分組網站維護 (40%)</span> - 每週至少兩次推送與課程進度相關的學習內容與心得。</p>
-<p style="padding-left: 60px;">w9 期中自評、w18 期末自評</p><h1>w3</h1>
+<p style="padding-left: 60px;">w9 期中自評、w18 期末自評</p>
+<h1>w3</h1>
 <p><span>用什麼套件完成 </span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span> 與 </span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span> 零組件設計繪圖？ </span><a href="https://solvespace.com/">Solvespace</a><span>, </span><a href="https://plm.sw.siemens.com/en-US/nx/cad-online/">Siemens NX</a><span>, </span><a href="https://www.onshape.com/en/">Onshape</a><span> 或其他？各有什麼優缺點？ (</span><a href="https://mde.tw/cad2025/downloads/plotter.7z">plotter.7z</a><span>, </span><a href="https://41323122.github.io/Team/downloads/open_duck_mini.7z">open_duck_mini.7z</a><span>)</span></p>
 <p><span></span></p>
 <p>我們這組選擇使用 Onshape 來進行繪製 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span><span> </span>零組件設計繪圖</span>，主要原因是它是一個雲端 CAD 平台，不需要安裝軟體即可透過網頁操作。Onshape 最大的優點是 即時協作，小組成員可以同時在線上編輯同一個檔案，彼此的修改會立即同步，避免了傳統 CAD 軟體需要反覆傳檔、合併的麻煩。這對於團隊合作特別有幫助，因為大家能在同一個工作環境中看到零組件的最新狀態，快速分工並組裝整體模型</p>
@@ -154,145 +155,165 @@
 <p><img alt="" height="325" src="/images/螢幕擷取畫面 2025-12-26 142840.png" width="579"/></p>
 <p><img alt="" height="324" src="/images/螢幕擷取畫面 2025-12-26 143404.png" width="576"/></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/i10VcLcqiTs" title="webots畫蘋果" width="963"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/1iKOxAbuyb8" title="webots 畫cat和dog" width="963"></iframe>蘋果描邊</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">"""draw_apple_supervisor controller."""
-
-from controller import Supervisor
-import cv2
-import numpy as np
-import math
-
-# ----------------- 固定參數 (米) -----------------
-L1, L2, L3, L4, L5 = 0.20, 0.27, 0.27, 0.20, 0.20
-Ex = L5  # E 點的 x 座標 (0.2)
-
-# 目標圓心與半徑
-target_center = np.array([0.1, 0.3])
-target_radius = 0.1
-N_POINTS = 50
-
-# ----------------- 反解函式 -----------------
-def ik(cx: float, cy: float) -&gt; tuple:
-    L_AC_sq = cx**2 + cy**2
-    L_AC = math.sqrt(L_AC_sq)
-    if L_AC &gt; (L1 + L2) or L_AC &lt; abs(L1 - L2) or L_AC == 0:
-        return (None, None)
-    alpha = math.atan2(cy, cx)
-    cos_beta1 = (L1**2 + L_AC_sq - L2**2) / (2 * L1 * L_AC)
-    cos_beta1 = np.clip(cos_beta1, -1.0, 1.0)
-    beta1 = math.acos(cos_beta1)
-    sigma1 = 1
-    t1 = alpha + sigma1 * beta1
-
-    dx, dy = cx - Ex, cy
-    L_EC_sq = dx**2 + dy**2
-    L_EC = math.sqrt(L_EC_sq)
-    if L_EC &gt; (L4 + L3) or L_EC &lt; abs(L4 - L3) or L_EC == 0:
-        return (None, None)
-    gamma = math.atan2(dy, dx)
-    cos_beta2 = (L4**2 + L_EC_sq - L3**2) / (2 * L4 * L_EC)
-    cos_beta2 = np.clip(cos_beta2, -1.0, 1.0)
-    beta2 = math.acos(cos_beta2)
-    sigma2 = -1
-    t2 = gamma + sigma2 * beta2
-
-    t1_rad = t1 % (2 * math.pi)
-    t2_rad = t2 % (2 * math.pi)
-    return math.degrees(t1_rad), math.degrees(t2_rad)
-
-# ----------------- 蘋果輪廓處理 -----------------
-def load_apple_points(image_path, N_points=100):
-    img = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)
-    if img is None:
-        print(f"Error: 無法讀取圖片 {image_path}")
-        exit(1)
-    _, binary = cv2.threshold(img, 200, 255, cv2.THRESH_BINARY_INV)
-    contours, _ = cv2.findContours(binary, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE)
-    if not contours:
-        print("Error: 找不到輪廓")
-        exit(1)
-    main_contour = max(contours, key=cv2.contourArea)
-    if len(main_contour) &gt; N_points:
-        indices = np.linspace(0, len(main_contour) - 1, N_points, dtype=int)
-        sampled = main_contour[indices]
-    else:
-        sampled = main_contour
-    pts = sampled[:, 0, :]
-    h, w = binary.shape
-    pts[:, 1] = h - pts[:, 1]
-    center = np.mean(pts, axis=0)
-    pts_centered = pts - center
-    scale = np.max(np.linalg.norm(pts_centered, axis=1))
-    pts_normalized = pts_centered / scale
-    pts_scaled = pts_normalized * target_radius + target_center
-    return pts_scaled
-
-# ----------------- IndexedLineSet 字串生成 -----------------
-def generate_indexed_line_set(points):
-    point_str = ",\n      ".join([f"{x:.5f} {y:.5f} 0.001" for x, y in points])
-    indices = ", ".join([str(i) for i in range(len(points))]) + ", 0"  # 形成封閉線條
-    node_str = f"""
-DEF APPLE_SHAPE Shape {{
-  appearance Appearance {{
-    material Material {{
-      diffuseColor 1 0 0
-      emissiveColor 1 0 0
-    }}
-  }}
-  geometry IndexedLineSet {{
-    coord Coordinate {{
-      point [
-        {point_str}
-      ]
-    }}
-    coordIndex [
-      {indices}
-    ]
-  }}
-}}
-"""
-    return node_str
-
-# ----------------- 主流程 -----------------
-def main():
-    robot = Supervisor()
-    timestep = int(robot.getBasicTimeStep())
-
-    # 載入輪廓點
-    apple_points = load_apple_points("apple-clip-art.jpg", N_points=N_POINTS)
-
-    # 建立 IndexedLineSet 串接綠線
-    root = robot.getRoot()
-    children_field = root.getField("children")
-    line_node = generate_indexed_line_set(apple_points)
-    children_field.importMFNodeFromString(-1, line_node)
-
-    # 取得馬達
-    t1 = robot.getDevice("t1")
-    t2 = robot.getDevice("t2")
-    t1.setVelocity(5.0)
-    t2.setVelocity(5.0)
-    deg = math.pi / 180
-    t1_offset = -90
-    t2_offset = -17.9
-
-    # 畫圖：依序移動到每個輪廓點
-    for (x, y) in apple_points:
-        t1_deg, t2_deg = ik(x, y)
-        if t1_deg is None or t2_deg is None:
-            print(f"點 ({x:.3f}, {y:.3f}) 超出可達範圍，略過")
-            continue
-        t1_rad = (t1_deg + t1_offset) * deg
-        t2_rad = (t2_deg + t2_offset) * deg
-        t1.setPosition(t1_rad)
-        t2.setPosition(t2_rad)
-
-        # 簡單延遲讓 plotter 有時間移動
-        for _ in range(5):
-            if robot.step(timestep) == -1:
-                return
-        print(f"描點: ({x:.3f}, {y:.3f})")
-
-if __name__ == "__main__":
-    main()</pre>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/1iKOxAbuyb8" title="webots 畫cat和dog" width="963"></iframe> </p>
 <p></p>
+<h1>w10</h1>
+<p><span>w10: </span><a href="https://cyberbotics.com/">Webots</a><span> 是什麼？有什麼特點？ 如何進行場景模擬？ 如何用 Python 進行控制系統設計？ (</span><a href="https://cyberbotics.com/doc/guide/tutorials">Tutorial</a><span>)</span></p>
+<p><em><strong>webots是什麼?</strong></em></p>
+<p data-end="176" data-start="86">webots是一款由 Cyberbotics 開發、跨平台且專業的開源 3D 機器人模擬軟體。<br data-end="145" data-start="142"/>它可用於研究、教育、快速原型製作，以及工業級機器人演算法開發。</p>
+<p data-end="252" data-start="178">你可以在其中建構 3D 世界、加入機器人、加入感測器與致動器，並透過程式語言（Python、C、C++、Java、ROS 等）控制它們的行為與決策。</p>
+<p data-end="252" data-start="178"></p>
+<p data-end="252" data-start="178"><em><strong>webots的特點</strong></em></p>
+<p data-end="252" data-start="178"><em><strong></strong></em></p>
+<p data-end="252" data-start="178"><em>1. 豐富的機器人與感測器庫</em></p>
+<p data-end="338" data-start="318">Webots 內建許多常見的機器人模型：</p>
+<p data-end="338" data-start="318">車輪式機器人（如 Pioneer 3-DX, e-puck）</p>
+<p></p>
+<p data-end="394" data-start="374">四足/雙足機器人（如 Spot、NAO）</p>
+<p></p>
+<p data-end="412" data-start="397">機械手臂（UR5、KUKA…）</p>
+<p></p>
+<p data-end="427" data-start="415">飛行器（四旋翼、多旋翼）</p>
+<p data-end="438" data-start="429">也包含各式感測器：</p>
+<p></p>
+<p data-end="457" data-start="441">相機（Camera、RGB-D）</p>
+<p></p>
+<p data-end="469" data-start="460">雷射（Lidar）</p>
+<p></p>
+<p data-end="475" data-start="472">IMU</p>
+<p></p>
+<p data-end="481" data-start="478">GPS</p>
+<p></p>
+<p data-end="497" data-start="484">距離感測器、觸感感測器等。</p>
+<hr data-end="502" data-start="499"/>
+<p data-end="558" data-start="526"><em>2. 完整物理引擎支持</em></p>
+<p data-end="558" data-start="526">Webots 使用 ODE 物理引擎（並可切換其他引擎），提供：</p>
+<p></p>
+<p data-end="569" data-start="561">重力、摩擦、碰撞</p>
+<p></p>
+<p data-end="582" data-start="572">關節、平台、驅動馬達</p>
+<p></p>
+<p data-end="618" data-start="585">真實物理動力模擬<br data-end="596" data-start="593"/>適用於自走車、機械手臂、類人機器人、飛行器。</p>
+<hr data-end="623" data-start="620"/>
+<p data-end="671" data-start="649"><em>3. 可視化3D編輯器</em></p>
+<p data-end="671" data-start="649">可在 GUI 中輕鬆建立 3D 場景，包括：</p>
+<p></p>
+<p data-end="676" data-start="674">地形</p>
+<p></p>
+<p data-end="682" data-start="679">建築物</p>
+<p></p>
+<p data-end="688" data-start="685">障礙物</p>
+<p></p>
+<p data-end="696" data-start="691">道路、標誌</p>
+<p></p>
+<p data-end="706" data-start="699">光源、天空環境</p>
+<p data-end="721" data-start="708">拖拉方式建立場景十分直觀。</p>
+<hr data-end="726" data-start="723"/>
+<p data-end="761" data-start="747"><em>4. 跨語言控制</em></p>
+<p data-end="761" data-start="747">你可使用以下語言撰寫控制器：</p>
+<p></p>
+<p data-end="779" data-start="764"><em>Python（最常用）</em></p>
+<p></p>
+<p data-end="789" data-start="782">C / C++</p>
+<p></p>
+<p data-end="796" data-start="792">Java</p>
+<p></p>
+<p data-end="805" data-start="799">MATLAB</p>
+<p></p>
+<p data-end="836" data-start="808">ROS (Robot Operating System)</p>
+<hr data-end="841" data-start="838"/>
+<p data-end="884" data-start="867"><em>5. 與ROS完整整合</em></p>
+<p data-end="884" data-start="867">支援 ROS1、ROS2，可搭配：</p>
+<p></p>
+<p data-end="891" data-start="887">Nav2</p>
+<p></p>
+<p data-end="906" data-start="894">Slam Toolbox</p>
+<p></p>
+<p data-end="933" data-start="909">RViz<br data-end="916" data-start="913"/>讓研究者能使用真實機器人軟體套件。</p>
+<p data-end="884" data-start="867"><em><strong></strong></em></p>
+<p data-end="884" data-start="867"><em><strong>如何進行場景模擬？</strong></em></p>
+<p data-end="884" data-start="867"><em>Step1 - 建立或開啟一個世界(*.wbt)</em></p>
+<p></p>
+<p data-end="1031" data-start="999">打開 Webots<span> </span><em>→<span> </span><code data-end="1017" data-start="1011">File</code><span> </span>→<span> </span><code data-end="1031" data-start="1020">New World</code></em></p>
+<p></p>
+<p data-end="1043" data-start="1034">或開現有範例，如：</p>
+<p></p>
+<p data-end="1072" data-start="1048"><em>robotics → mobile robots</em></p>
+<p></p>
+<p data-end="1102" data-start="1077"><em>manipulation → robot arms</em></p>
+<hr data-end="1107" data-start="1104"/>
+<p data-end="1180" data-start="1133"><em>Step2 - 在場景中加入物件</em></p>
+<p data-end="1180" data-start="1133">按右側<span> </span><em data-end="1173" data-start="1137">Add → Bot → Obstacle → Environment</em><br data-end="1176" data-start="1173"/>可加入：</p>
+<p></p>
+<p data-end="1202" data-start="1183">地面（Floor / Terrain）</p>
+<p></p>
+<p data-end="1214" data-start="1205">桌子、箱子等障礙物</p>
+<p></p>
+<p data-end="1222" data-start="1217">機器人模型</p>
+<p></p>
+<p data-end="1242" data-start="1225">感測器（Lidar、Camera）</p>
+<p></p>
+<p data-end="1250" data-start="1245">光源、天空</p>
+<p data-end="1180" data-start="1133"><strong></strong></p>
+<hr data-end="1255" data-start="1252"/>
+<p data-end="1317" data-start="1290"><em>Step3 - 加入控制器(controller)</em></p>
+<p data-end="1317" data-start="1290">每個機器人都必須綁定一個 controller 程式：</p>
+<p></p>
+<p data-end="1350" data-start="1321">在 Robot 節點中找到<em><span> </span><code data-end="1347" data-start="1335">controller</code><span> </span></em>欄位</p>
+<p></p>
+<p data-end="1376" data-start="1354">選擇<em><span> </span><code data-end="1362" data-start="1357">new</code><span> </span></em>建立<em><span> </span>Python</em><span> </span>控制器</p>
+<p></p>
+<p data-end="1407" data-start="1380">Webots 會建立<span> </span><em><code data-end="1396" data-start="1391">.py</code></em><span> </span>檔並自動與機器人連結</p>
+<p data-end="1317" data-start="1290"></p>
+<hr data-end="1412" data-start="1409"/>
+<p><em>Step4 - 執行模擬</em></p>
+<p>按 播放鍵<strong data-end="1447" data-start="1438"> ▶</strong></p>
+<p>控制器開始執行，機器人會依你的程式運作</p>
+<p></p>
+<p data-end="1491" data-start="1472">可隨時修改場景、調整物理參數、紀錄影片</p>
+<p data-end="884" data-start="867"><em><strong>如何用 Python 進行控制系統設計？</strong></em></p>
+<p data-end="1554" data-start="1524">Webots 提供 Python API，以下示範基本流程：</p>
+<p data-end="884" data-start="867"><em>Step1 - 匯入webots API</em></p>
+<p data-end="884" data-start="867"><em></em></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from controller import Robot</pre>
+<p><em>Step2 - 初始化機器人</em><em></em></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">robot = Robot()
+timestep = int(robot.getBasicTimeStep())</pre>
+<p data-end="884" data-start="867"><em>Step3 - 取得馬達與感測器</em></p>
+<p data-end="884" data-start="867">例如控制輪式機器人:</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">left_motor = robot.getDevice('left wheel motor')
+right_motor = robot.getDevice('right wheel motor')
+ 
+left_motor.setPosition(float('inf'))  # velocity mode
+right_motor.setPosition(float('inf'))
+</pre>
+<div class="line number1 index0 alt2"><code class="py plain"> </code></div>
+<div class="line number5 index4 alt2"><code class="py plain"><em>開啟距離感測器：</em></code></div>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">ds = robot.getDevice('ds0')
+ds.enable(timestep)</pre>
+<p data-end="884" data-start="867"><em>Step4 - 主控制迴圈(控制系統核心)</em></p>
+<div>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">while robot.step(timestep) != -1:
+    distance = ds.getValue()
+ 
+    # 簡單避障邏輯
+    if distance &lt; 800:
+        left_motor.setVelocity(-2.0)
+        right_motor.setVelocity(2.0)
+    else:
+        left_motor.setVelocity(4.0)
+        right_motor.setVelocity(4.0)</pre>
+</div>
+<p><em> </em></p>
+<h1>w14</h1>
+<p><span>w14: </span><a href="https://cyberbotics.com/">Webots</a><span><span> </span>的模型有沒有辦法用程式方法建立? 有沒有辦法直接從 CAD 套件中轉出<span> </span></span><a href="https://cyberbotics.com/">Webots</a><span><span> </span>的場景模型？</span></p>
+<p data-end="183" data-start="68">Webots 的模型可以透過程式方式建立，例如使用 PROTO 參數化模型或直接以文字格式產生 world（.wbt）檔案，藉此自動建立或重複使用場景與物件。此外，也可在模擬過程中透過 Supervisor API 動態新增模型。</p>
+<p data-end="334" data-start="185">Webots 亦支援由 CAD 套件匯出模型後匯入使用，常見流程為將 CAD 模型轉成 DAE、STL 或 OBJ 等 Mesh 格式，再於 Webots 中作為場景或機器人外觀模型使用。然而，CAD 匯入僅提供幾何外型，仍需在 Webots 中另外設定碰撞物件、物理參數與關節，才能進行正確模擬。</p>
+<h1>w17</h1>
+<p><em><span>w17: 如何實作一套 </span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span>？(</span><a href="https://la.disneyresearch.com/publication/design-and-control-of-a-bipedal-robotic-character/">Disney Bipedal Robot</a><span>)</span><br/>          </em></p>
+<p data-end="273" data-start="96">本實作先使用 <strong data-end="127" data-start="103">SolveSpace 與 Onshape</strong> 進行 5-bar Linkage Plotter 與 Openduck mini（Disney Bipedal Robot）的機構設計與尺寸規劃，完成各連桿與本體之 CAD 建模後，將模型匯出為 <strong data-end="239" data-start="226">STL 或 DAE</strong> 等格式，再匯入 <strong data-end="258" data-start="248">Webots</strong> 作為機器人與場景的外觀模型。</p>
+<p data-end="472" data-start="275">在 Webots 中，針對匯入的 CAD 模型重新建立 <strong data-end="325" data-start="303">Solid 與 HingeJoint</strong> 結構，設定各關節的馬達控制、碰撞物件（boundingObject）與物理參數（Physics）。5-bar Linkage Plotter 透過運動學計算將繪圖軌跡轉換為兩主動關節角度，以控制末端點完成繪圖；Openduck mini 則透過雙足關節協調與步態規劃，實現基本行走與平衡動作。</p><h1>w18</h1>
+<p><span>w18: 課程總結</span></p>
+<p data-end="288" data-start="110">這門課從零組件設計一路做到模擬與控制，第一次實際接觸到機構設計與機器人模擬整合的流程。一開始在4連桿的部分，使用 SolveSpace 與 Onshape 畫連桿與零件，過程中比較能理解平面機構的運動關係；而 Openduck mini 是成員畫的，主要用 Onshape 建模，結構較複雜，在將模型匯入 Webots 後，才發現和單純畫圖差很多。模型匯進來之後如果沒有設定關節、碰撞與物理參數，機構是無法正常運動的，透過實際操作 Webots，逐步加入馬達與關節控制，才慢慢理解模擬環境中動態行為是怎麼產生的，後續使用 Python 進行控制時，讓我把前面學到的機構概念實際用在控制上，這門課讓我不是只停留在畫圖或寫程式，而是能把設計、模擬與控制串在一起，對之後做專題或相關課程都有幫助。</p><h1>plotter 操作影片</h1>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/jllrJDAdpNI" title="webots plotter 操作步驟" width="1019"></iframe></p>
