--- a/content/About.html
+++ b/content/About.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a></li>
+                     <li><a href='About.html'>About</a><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w14.html'>w14</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a><li><a href='plotter 操作影片.html'>plotter 操作影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -157,7 +157,8 @@ img.add_border {
 <p style="padding-left: 60px;">w17: 如何實作一套 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a>？(<a href="https://la.disneyresearch.com/publication/design-and-control-of-a-bipedal-robotic-character/">Disney Bipedal Robot</a>)</p>
 <p style="padding-left: 60px;">w18: 課程總結</p>
 <p style="padding-left: 30px;"><span style="background-color: #ffff00;">個人與分組網站維護 (40%)</span> - 每週至少兩次推送與課程進度相關的學習內容與心得。</p>
-<p style="padding-left: 60px;">w9 期中自評、w18 期末自評</p><br /> <a href='w3.html'>Next</a> >> w3</div>
+<p style="padding-left: 60px;">w9 期中自評、w18 期末自評</p>
+<br /> <a href='w3.html'>Next</a> >> w3</div>
         
     <!-- footer -->
       <div class="container">
