--- a/content/w17.html
+++ b/content/w17.html
@@ -2,6 +2,7 @@
         <head>
         <title>cad2025_hw</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,23 +142,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w3.html'>Next</a> >> w3<br /><h1>About</h1>
-<p>課程名稱: 電腦輔助設計與實習</p>
-<p>github:<a href="https://github.com/41323143/CAD-2025-41323143">https://github.com/41323143/CAD-2025-41323143</a></p>
-<p>群組網站:<a href="https://41323143.github.io/CAD-2025-41323143/content/index.html">https://41323143.github.io/CAD-2025-41323143/content/index.html</a></p>
-<p>課程評分:</p>
-<p style="padding-left: 30px;"><span style="background-color: #ffff00;">學習心得報告 (60%)</span> - MS Teams 線上參與，6人一組每三週發表學習心得。</p>
-<p style="padding-left: 60px;">w3、w7、w10、w14、w17、w18</p>
-<p style="padding-left: 60px;"><span style="background-color: #ffcc99;">學習心得報告主題</span>:</p>
-<p style="padding-left: 60px;">w3: 用什麼套件完成 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a> 零組件設計繪圖？ <a href="https://solvespace.com">Solvespace</a>, <a href="https://plm.sw.siemens.com/en-US/nx/cad-online/">Siemens NX</a>, <a href="https://www.onshape.com/en/">Onshape</a> 或其他？各有什麼優缺點？ (<a href="https://mde.tw/cad2025/downloads/plotter.7z">plotter.7z</a>, <a href="./../downloads/open_duck_mini.7z">open_duck_mini.7z</a>)</p>
-<p style="padding-left: 60px;">w7 (<span style="background-color: #ccffcc;">2a 採 Youtube 影片簡報</span>): <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a> 零組件設計繪製完成之後，如何切割零件? 為何要切割零件？ 如何利用 <a href="https://cyberbotics.com/">Webots</a> 進行後續的控制系統設計與動態模擬 (Dynamic Simulation)？(<a href="https://mde.tw/cad2025/downloads/plotter_project.7z">plotter_project.7z</a>)</p>
-<p style="padding-left: 60px;">w10: <a href="https://cyberbotics.com/">Webots</a> 是什麼？有什麼特點？ 如何進行場景模擬？ 如何用 Python 進行控制系統設計？ (<a href="https://cyberbotics.com/doc/guide/tutorials">Tutorial</a>)</p>
-<p style="padding-left: 60px;">w14: <a href="https://cyberbotics.com/">Webots</a> 的模型有沒有辦法用程式方法建立? 有沒有辦法直接從 CAD 套件中轉出 <a href="https://cyberbotics.com/">Webots</a> 的場景模型？</p>
-<p style="padding-left: 60px;">w17: 如何實作一套 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a>？(<a href="https://la.disneyresearch.com/publication/design-and-control-of-a-bipedal-robotic-character/">Disney Bipedal Robot</a>)</p>
-<p style="padding-left: 60px;">w18: 課程總結</p>
-<p style="padding-left: 30px;"><span style="background-color: #ffff00;">個人與分組網站維護 (40%)</span> - 每週至少兩次推送與課程進度相關的學習內容與心得。</p>
-<p style="padding-left: 60px;">w9 期中自評、w18 期末自評</p>
-<br /> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <a href='w18.html'>Next</a> >> w18<br /><h1>w17</h1>
+<p><em><span>w17: 如何實作一套 </span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span>？(</span><a href="https://la.disneyresearch.com/publication/design-and-control-of-a-bipedal-robotic-character/">Disney Bipedal Robot</a><span>)</span><br/>          </em></p>
+<p data-end="273" data-start="96">本實作先使用 <strong data-end="127" data-start="103">SolveSpace 與 Onshape</strong> 進行 5-bar Linkage Plotter 與 Openduck mini（Disney Bipedal Robot）的機構設計與尺寸規劃，完成各連桿與本體之 CAD 建模後，將模型匯出為 <strong data-end="239" data-start="226">STL 或 DAE</strong> 等格式，再匯入 <strong data-end="258" data-start="248">Webots</strong> 作為機器人與場景的外觀模型。</p>
+<p data-end="472" data-start="275">在 Webots 中，針對匯入的 CAD 模型重新建立 <strong data-end="325" data-start="303">Solid 與 HingeJoint</strong> 結構，設定各關節的馬達控制、碰撞物件（boundingObject）與物理參數（Physics）。5-bar Linkage Plotter 透過運動學計算將繪圖軌跡轉換為兩主動關節角度，以控制末端點完成繪圖；Openduck mini 則透過雙足關節協調與步態規劃，實現基本行走與平衡動作。</p><br />w14 << <a href='w14.html'>Previous</a> <a href='w18.html'>Next</a> >> w18</div>
         
     <!-- footer -->
       <div class="container">
