--- a/content/w18.html
+++ b/content/w18.html
@@ -2,6 +2,7 @@
         <head>
         <title>cad2025_hw</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,23 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w3.html'>Next</a> >> w3<br /><h1>About</h1>
-<p>課程名稱: 電腦輔助設計與實習</p>
-<p>github:<a href="https://github.com/41323143/CAD-2025-41323143">https://github.com/41323143/CAD-2025-41323143</a></p>
-<p>群組網站:<a href="https://41323143.github.io/CAD-2025-41323143/content/index.html">https://41323143.github.io/CAD-2025-41323143/content/index.html</a></p>
-<p>課程評分:</p>
-<p style="padding-left: 30px;"><span style="background-color: #ffff00;">學習心得報告 (60%)</span> - MS Teams 線上參與，6人一組每三週發表學習心得。</p>
-<p style="padding-left: 60px;">w3、w7、w10、w14、w17、w18</p>
-<p style="padding-left: 60px;"><span style="background-color: #ffcc99;">學習心得報告主題</span>:</p>
-<p style="padding-left: 60px;">w3: 用什麼套件完成 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a> 零組件設計繪圖？ <a href="https://solvespace.com">Solvespace</a>, <a href="https://plm.sw.siemens.com/en-US/nx/cad-online/">Siemens NX</a>, <a href="https://www.onshape.com/en/">Onshape</a> 或其他？各有什麼優缺點？ (<a href="https://mde.tw/cad2025/downloads/plotter.7z">plotter.7z</a>, <a href="./../downloads/open_duck_mini.7z">open_duck_mini.7z</a>)</p>
-<p style="padding-left: 60px;">w7 (<span style="background-color: #ccffcc;">2a 採 Youtube 影片簡報</span>): <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a> 零組件設計繪製完成之後，如何切割零件? 為何要切割零件？ 如何利用 <a href="https://cyberbotics.com/">Webots</a> 進行後續的控制系統設計與動態模擬 (Dynamic Simulation)？(<a href="https://mde.tw/cad2025/downloads/plotter_project.7z">plotter_project.7z</a>)</p>
-<p style="padding-left: 60px;">w10: <a href="https://cyberbotics.com/">Webots</a> 是什麼？有什麼特點？ 如何進行場景模擬？ 如何用 Python 進行控制系統設計？ (<a href="https://cyberbotics.com/doc/guide/tutorials">Tutorial</a>)</p>
-<p style="padding-left: 60px;">w14: <a href="https://cyberbotics.com/">Webots</a> 的模型有沒有辦法用程式方法建立? 有沒有辦法直接從 CAD 套件中轉出 <a href="https://cyberbotics.com/">Webots</a> 的場景模型？</p>
-<p style="padding-left: 60px;">w17: 如何實作一套 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a> 與 <a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a>？(<a href="https://la.disneyresearch.com/publication/design-and-control-of-a-bipedal-robotic-character/">Disney Bipedal Robot</a>)</p>
-<p style="padding-left: 60px;">w18: 課程總結</p>
-<p style="padding-left: 30px;"><span style="background-color: #ffff00;">個人與分組網站維護 (40%)</span> - 每週至少兩次推送與課程進度相關的學習內容與心得。</p>
-<p style="padding-left: 60px;">w9 期中自評、w18 期末自評</p>
-<br /> <a href='w3.html'>Next</a> >> w3</div>
+    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='plotter 操作影片.html'>Next</a> >> plotter 操作影片<br /><h1>w18</h1>
+<p><span>w18: 課程總結</span></p>
+<p data-end="288" data-start="110">這門課從零組件設計一路做到模擬與控制，第一次實際接觸到機構設計與機器人模擬整合的流程。一開始在4連桿的部分，使用 SolveSpace 與 Onshape 畫連桿與零件，過程中比較能理解平面機構的運動關係；而 Openduck mini 是成員畫的，主要用 Onshape 建模，結構較複雜，在將模型匯入 Webots 後，才發現和單純畫圖差很多。模型匯進來之後如果沒有設定關節、碰撞與物理參數，機構是無法正常運動的，透過實際操作 Webots，逐步加入馬達與關節控制，才慢慢理解模擬環境中動態行為是怎麼產生的，後續使用 Python 進行控制時，讓我把前面學到的機構概念實際用在控制上，這門課讓我不是只停留在畫圖或寫程式，而是能把設計、模擬與控制串在一起，對之後做專題或相關課程都有幫助。</p><br />w17 << <a href='w17.html'>Previous</a> <a href='plotter 操作影片.html'>Next</a> >> plotter 操作影片</div>
         
     <!-- footer -->
       <div class="container">
