新增Final分頁並放上期末題目影片

--- a/config/content.htm
+++ b/config/content.htm
@@ -14,7 +14,9 @@
 <p style="padding-left: 60px;">w18: 課程總結</p>
 <p style="padding-left: 30px;"><span style="background-color: #ffff00;">個人與分組網站維護 (40%)</span> - 每週至少兩次推送與課程進度相關的學習內容與心得。</p>
 <p style="padding-left: 60px;">w9 期中自評、w18 期末自評</p>
-<h1>w3</h1>
+<p style="padding-left: 60px;"></p>
+<h1>HW</h1>
+<h2>w3</h2>
 <p><span>用什麼套件完成 </span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span> 與 </span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span> 零組件設計繪圖？ </span><a href="https://solvespace.com/">Solvespace</a><span>, </span><a href="https://plm.sw.siemens.com/en-US/nx/cad-online/">Siemens NX</a><span>, </span><a href="https://www.onshape.com/en/">Onshape</a><span> 或其他？各有什麼優缺點？ (</span><a href="https://mde.tw/cad2025/downloads/plotter.7z">plotter.7z</a><span>, </span><a href="https://41323122.github.io/Team/downloads/open_duck_mini.7z">open_duck_mini.7z</a><span>)</span></p>
 <p><span></span></p>
 <p>我們這組選擇使用 Onshape 來進行繪製 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span><span> </span>零組件設計繪圖</span>，主要原因是它是一個雲端 CAD 平台，不需要安裝軟體即可透過網頁操作。Onshape 最大的優點是 即時協作，小組成員可以同時在線上編輯同一個檔案，彼此的修改會立即同步，避免了傳統 CAD 軟體需要反覆傳檔、合併的麻煩。這對於團隊合作特別有幫助，因為大家能在同一個工作環境中看到零組件的最新狀態，快速分工並組裝整體模型</p>
@@ -150,14 +152,14 @@
 </tr>
 </tbody>
 </table>
-<h1>w7</h1>
+<h2>w7</h2>
 <h4 style="text-align: left;"><span style="color: #000000;"><span>w7 (</span><span>2a 採 Youtube 影片簡報</span><span>):<span> </span></span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span> 零組件設計繪製完成之後，如何切割零件? 為何要切割零件？ 如何利用<span> </span></span><a href="https://cyberbotics.com/">Webots</a><span><span> </span>進行後續的控制系統設計與動態模擬 (Dynamic Simulation)？(</span><a href="https://mde.tw/cad2025/downloads/plotter_project.7z">plotter_project.7z</a><span>)</span></span></h4>
 <p><img alt="" height="325" src="/images/螢幕擷取畫面 2025-12-26 142840.png" width="579"/></p>
 <p><img alt="" height="324" src="/images/螢幕擷取畫面 2025-12-26 143404.png" width="576"/></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/i10VcLcqiTs" title="webots畫蘋果" width="963"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/1iKOxAbuyb8" title="webots 畫cat和dog" width="963"></iframe> </p>
 <p></p>
-<h1>w10</h1>
+<h2>w10</h2>
 <p><span>w10: </span><a href="https://cyberbotics.com/">Webots</a><span> 是什麼？有什麼特點？ 如何進行場景模擬？ 如何用 Python 進行控制系統設計？ (</span><a href="https://cyberbotics.com/doc/guide/tutorials">Tutorial</a><span>)</span></p>
 <p><em><strong>webots是什麼?</strong></em></p>
 <p data-end="176" data-start="86">webots是一款由 Cyberbotics 開發、跨平台且專業的開源 3D 機器人模擬軟體。<br data-end="145" data-start="142"/>它可用於研究、教育、快速原型製作，以及工業級機器人演算法開發。</p>
@@ -305,15 +307,26 @@ ds.enable(timestep)</pre>
         right_motor.setVelocity(4.0)</pre>
 </div>
 <p><em> </em></p>
-<h1>w14</h1>
+<h2>w14</h2>
 <p><span>w14: </span><a href="https://cyberbotics.com/">Webots</a><span><span> </span>的模型有沒有辦法用程式方法建立? 有沒有辦法直接從 CAD 套件中轉出<span> </span></span><a href="https://cyberbotics.com/">Webots</a><span><span> </span>的場景模型？</span></p>
 <p data-end="183" data-start="68">Webots 的模型可以透過程式方式建立，例如使用 PROTO 參數化模型或直接以文字格式產生 world（.wbt）檔案，藉此自動建立或重複使用場景與物件。此外，也可在模擬過程中透過 Supervisor API 動態新增模型。</p>
 <p data-end="334" data-start="185">Webots 亦支援由 CAD 套件匯出模型後匯入使用，常見流程為將 CAD 模型轉成 DAE、STL 或 OBJ 等 Mesh 格式，再於 Webots 中作為場景或機器人外觀模型使用。然而，CAD 匯入僅提供幾何外型，仍需在 Webots 中另外設定碰撞物件、物理參數與關節，才能進行正確模擬。</p>
-<h1>w17</h1>
+<h2>w17</h2>
 <p><em><span>w17: 如何實作一套 </span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span>？(</span><a href="https://la.disneyresearch.com/publication/design-and-control-of-a-bipedal-robotic-character/">Disney Bipedal Robot</a><span>)</span><br/>          </em></p>
 <p data-end="273" data-start="96">本實作先使用 <strong data-end="127" data-start="103">SolveSpace 與 Onshape</strong> 進行 5-bar Linkage Plotter 與 Openduck mini（Disney Bipedal Robot）的機構設計與尺寸規劃，完成各連桿與本體之 CAD 建模後，將模型匯出為 <strong data-end="239" data-start="226">STL 或 DAE</strong> 等格式，再匯入 <strong data-end="258" data-start="248">Webots</strong> 作為機器人與場景的外觀模型。</p>
-<p data-end="472" data-start="275">在 Webots 中，針對匯入的 CAD 模型重新建立 <strong data-end="325" data-start="303">Solid 與 HingeJoint</strong> 結構，設定各關節的馬達控制、碰撞物件（boundingObject）與物理參數（Physics）。5-bar Linkage Plotter 透過運動學計算將繪圖軌跡轉換為兩主動關節角度，以控制末端點完成繪圖；Openduck mini 則透過雙足關節協調與步態規劃，實現基本行走與平衡動作。</p><h1>w18</h1>
+<p data-end="472" data-start="275">在 Webots 中，針對匯入的 CAD 模型重新建立 <strong data-end="325" data-start="303">Solid 與 HingeJoint</strong> 結構，設定各關節的馬達控制、碰撞物件（boundingObject）與物理參數（Physics）。5-bar Linkage Plotter 透過運動學計算將繪圖軌跡轉換為兩主動關節角度，以控制末端點完成繪圖；Openduck mini 則透過雙足關節協調與步態規劃，實現基本行走與平衡動作。</p>
+<h2>w18</h2>
 <p><span>w18: 課程總結</span></p>
-<p data-end="288" data-start="110">這門課從零組件設計一路做到模擬與控制，第一次實際接觸到機構設計與機器人模擬整合的流程。一開始在4連桿的部分，使用 SolveSpace 與 Onshape 畫連桿與零件，過程中比較能理解平面機構的運動關係；而 Openduck mini 是成員畫的，主要用 Onshape 建模，結構較複雜，在將模型匯入 Webots 後，才發現和單純畫圖差很多。模型匯進來之後如果沒有設定關節、碰撞與物理參數，機構是無法正常運動的，透過實際操作 Webots，逐步加入馬達與關節控制，才慢慢理解模擬環境中動態行為是怎麼產生的，後續使用 Python 進行控制時，讓我把前面學到的機構概念實際用在控制上，這門課讓我不是只停留在畫圖或寫程式，而是能把設計、模擬與控制串在一起，對之後做專題或相關課程都有幫助。</p><h1>plotter 操作影片</h1>
+<p data-end="288" data-start="110">這門課從零組件設計一路做到模擬與控制，第一次實際接觸到機構設計與機器人模擬整合的流程。一開始在4連桿的部分，使用 SolveSpace 與 Onshape 畫連桿與零件，過程中比較能理解平面機構的運動關係；而 Openduck mini 是成員畫的，主要用 Onshape 建模，結構較複雜，在將模型匯入 Webots 後，才發現和單純畫圖差很多。模型匯進來之後如果沒有設定關節、碰撞與物理參數，機構是無法正常運動的，透過實際操作 Webots，逐步加入馬達與關節控制，才慢慢理解模擬環境中動態行為是怎麼產生的，後續使用 Python 進行控制時，讓我把前面學到的機構概念實際用在控制上，這門課讓我不是只停留在畫圖或寫程式，而是能把設計、模擬與控制串在一起，對之後做專題或相關課程都有幫助。</p>
+<h1>plotter 操作影片</h1>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="542" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/jllrJDAdpNI" title="webots plotter 操作步驟" width="1019"></iframe></p>
+<h1>Final</h1>
+<p><span>題目一</span>:</p>
+<p style="text-align: left;">請依照繪圖機的起始狀態，利用 cylinder 建立右邊的馬達，以 box 建立 link 1，然後設法建立控制程式，讓 link 1 以順時針角度旋轉 75 度至水平位置，從開啟 Webots 至完成 link 1 旋轉至水平位置，請以 sharex 將操作過程拍攝為 mp4 影片，上傳至 Youtube，影片標題請命名為"學號 - 2025 電腦輔助設計與實習期末考週 2b 題目一"，之後將影片嵌入個人網頁的 H1 格式標題為 Final 的頁面中。</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="533" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/5Hd7LIz_7AQ" title="41323143 - 2025 電腦輔助設計與實習期末考週 2a 題目一" width="1000"></iframe></p>
+<p><span>題目二</span>:</p>
+<p>請讓 link 1 回到繪圖機的起始狀態角度後，以 box 建立 link 2，然後設法建立控制程式，讓 link 2 以順時針角度旋轉 80 度至與 link 1 水平位置，從接續 link 1 至完成 link 2 旋轉至與 link 1 水平對齊位置，請以 sharex 拍攝 mp4 影片，上傳至 Youtube，影片標題請命名為"學號 - 2025 電腦輔助設計與實習期末考週 2b 題目二"，之後將影片嵌入個人網頁的 H1 格式標題為 Final 的頁面中。</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="533" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/_kpPpBeerBE" title="41323143 - 2025 電腦輔助設計與實習期末考週 2a 題目二" width="1000"></iframe></p>
