--- a/content/w18.html
+++ b/content/w18.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2025_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w14.html'>w14</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a><li><a href='plotter 操作影片.html'>plotter 操作影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w14.html'>w14</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a></li></ul><li><a href='plotter 操作影片.html'>plotter 操作影片</a><li><a href='Final.html'>Final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -144,7 +144,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='plotter 操作影片.html'>Next</a> >> plotter 操作影片<br /><h1>w18</h1>
 <p><span>w18: 課程總結</span></p>
-<p data-end="288" data-start="110">這門課從零組件設計一路做到模擬與控制，第一次實際接觸到機構設計與機器人模擬整合的流程。一開始在4連桿的部分，使用 SolveSpace 與 Onshape 畫連桿與零件，過程中比較能理解平面機構的運動關係；而 Openduck mini 是成員畫的，主要用 Onshape 建模，結構較複雜，在將模型匯入 Webots 後，才發現和單純畫圖差很多。模型匯進來之後如果沒有設定關節、碰撞與物理參數，機構是無法正常運動的，透過實際操作 Webots，逐步加入馬達與關節控制，才慢慢理解模擬環境中動態行為是怎麼產生的，後續使用 Python 進行控制時，讓我把前面學到的機構概念實際用在控制上，這門課讓我不是只停留在畫圖或寫程式，而是能把設計、模擬與控制串在一起，對之後做專題或相關課程都有幫助。</p><br />w17 << <a href='w17.html'>Previous</a> <a href='plotter 操作影片.html'>Next</a> >> plotter 操作影片</div>
+<p data-end="288" data-start="110">這門課從零組件設計一路做到模擬與控制，第一次實際接觸到機構設計與機器人模擬整合的流程。一開始在4連桿的部分，使用 SolveSpace 與 Onshape 畫連桿與零件，過程中比較能理解平面機構的運動關係；而 Openduck mini 是成員畫的，主要用 Onshape 建模，結構較複雜，在將模型匯入 Webots 後，才發現和單純畫圖差很多。模型匯進來之後如果沒有設定關節、碰撞與物理參數，機構是無法正常運動的，透過實際操作 Webots，逐步加入馬達與關節控制，才慢慢理解模擬環境中動態行為是怎麼產生的，後續使用 Python 進行控制時，讓我把前面學到的機構概念實際用在控制上，這門課讓我不是只停留在畫圖或寫程式，而是能把設計、模擬與控制串在一起，對之後做專題或相關課程都有幫助。</p>
+<br />w17 << <a href='w17.html'>Previous</a> <a href='plotter 操作影片.html'>Next</a> >> plotter 操作影片</div>
         
     <!-- footer -->
       <div class="container">
