--- a/content/w3.html
+++ b/content/w3.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2025_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w14.html'>w14</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a><li><a href='plotter 操作影片.html'>plotter 操作影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='w3.html'>w3</a><li><a href='w7.html'>w7</a><li><a href='w10.html'>w10</a><li><a href='w14.html'>w14</a><li><a href='w17.html'>w17</a><li><a href='w18.html'>w18</a></li></ul><li><a href='plotter 操作影片.html'>plotter 操作影片</a><li><a href='Final.html'>Final</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w3</h1>
+    <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w3</h1>
 <p><span>用什麼套件完成 </span><a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span> 與 </span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span> 零組件設計繪圖？ </span><a href="https://solvespace.com/">Solvespace</a><span>, </span><a href="https://plm.sw.siemens.com/en-US/nx/cad-online/">Siemens NX</a><span>, </span><a href="https://www.onshape.com/en/">Onshape</a><span> 或其他？各有什麼優缺點？ (</span><a href="https://mde.tw/cad2025/downloads/plotter.7z">plotter.7z</a><span>, </span><a href="https://41323122.github.io/Team/downloads/open_duck_mini.7z">open_duck_mini.7z</a><span>)</span></p>
 <p><span></span></p>
 <p>我們這組選擇使用 Onshape 來進行繪製 <a href="https://youtu.be/iOLFP90DneY">5-bar Linkage Plotter</a><span><span> </span>與<span> </span></span><a href="https://mde.tw/cad2025/content/OpenDuck.html">Openduck mini</a><span><span> </span>零組件設計繪圖</span>，主要原因是它是一個雲端 CAD 平台，不需要安裝軟體即可透過網頁操作。Onshape 最大的優點是 即時協作，小組成員可以同時在線上編輯同一個檔案，彼此的修改會立即同步，避免了傳統 CAD 軟體需要反覆傳檔、合併的麻煩。這對於團隊合作特別有幫助，因為大家能在同一個工作環境中看到零組件的最新狀態，快速分工並組裝整體模型</p>
@@ -278,7 +278,7 @@ img.add_border {
 </tr>
 </tbody>
 </table>
-<br />About << <a href='About.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
+<br />HW << <a href='HW.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
         
     <!-- footer -->
       <div class="container">
