--- a/content/Final.html
+++ b/content/Final.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad2025_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -142,155 +142,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w10</h1>
-<p><span>w10: </span><a href="https://cyberbotics.com/">Webots</a><span> 是什麼？有什麼特點？ 如何進行場景模擬？ 如何用 Python 進行控制系統設計？ (</span><a href="https://cyberbotics.com/doc/guide/tutorials">Tutorial</a><span>)</span></p>
-<p><em><strong>webots是什麼?</strong></em></p>
-<p data-end="176" data-start="86">webots是一款由 Cyberbotics 開發、跨平台且專業的開源 3D 機器人模擬軟體。<br data-end="145" data-start="142"/>它可用於研究、教育、快速原型製作，以及工業級機器人演算法開發。</p>
-<p data-end="252" data-start="178">你可以在其中建構 3D 世界、加入機器人、加入感測器與致動器，並透過程式語言（Python、C、C++、Java、ROS 等）控制它們的行為與決策。</p>
-<p data-end="252" data-start="178"></p>
-<p data-end="252" data-start="178"><em><strong>webots的特點</strong></em></p>
-<p data-end="252" data-start="178"><em><strong></strong></em></p>
-<p data-end="252" data-start="178"><em>1. 豐富的機器人與感測器庫</em></p>
-<p data-end="338" data-start="318">Webots 內建許多常見的機器人模型：</p>
-<p data-end="338" data-start="318">車輪式機器人（如 Pioneer 3-DX, e-puck）</p>
+    <div id="tipue_search_content">plotter 操作影片 << <a href='plotter 操作影片.html'>Previous</a> <br /><h1>Final</h1>
+<p><span>題目一</span>:</p>
+<p style="text-align: left;">請依照繪圖機的起始狀態，利用 cylinder 建立右邊的馬達，以 box 建立 link 1，然後設法建立控制程式，讓 link 1 以順時針角度旋轉 75 度至水平位置，從開啟 Webots 至完成 link 1 旋轉至水平位置，請以 sharex 將操作過程拍攝為 mp4 影片，上傳至 Youtube，影片標題請命名為"學號 - 2025 電腦輔助設計與實習期末考週 2b 題目一"，之後將影片嵌入個人網頁的 H1 格式標題為 Final 的頁面中。</p>
 <p></p>
-<p data-end="394" data-start="374">四足/雙足機器人（如 Spot、NAO）</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="533" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/5Hd7LIz_7AQ" title="41323143 - 2025 電腦輔助設計與實習期末考週 2a 題目一" width="1000"></iframe></p>
+<p><span>題目二</span>:</p>
+<p>請讓 link 1 回到繪圖機的起始狀態角度後，以 box 建立 link 2，然後設法建立控制程式，讓 link 2 以順時針角度旋轉 80 度至與 link 1 水平位置，從接續 link 1 至完成 link 2 旋轉至與 link 1 水平對齊位置，請以 sharex 拍攝 mp4 影片，上傳至 Youtube，影片標題請命名為"學號 - 2025 電腦輔助設計與實習期末考週 2b 題目二"，之後將影片嵌入個人網頁的 H1 格式標題為 Final 的頁面中。</p>
 <p></p>
-<p data-end="412" data-start="397">機械手臂（UR5、KUKA…）</p>
-<p></p>
-<p data-end="427" data-start="415">飛行器（四旋翼、多旋翼）</p>
-<p data-end="438" data-start="429">也包含各式感測器：</p>
-<p></p>
-<p data-end="457" data-start="441">相機（Camera、RGB-D）</p>
-<p></p>
-<p data-end="469" data-start="460">雷射（Lidar）</p>
-<p></p>
-<p data-end="475" data-start="472">IMU</p>
-<p></p>
-<p data-end="481" data-start="478">GPS</p>
-<p></p>
-<p data-end="497" data-start="484">距離感測器、觸感感測器等。</p>
-<hr data-end="502" data-start="499"/>
-<p data-end="558" data-start="526"><em>2. 完整物理引擎支持</em></p>
-<p data-end="558" data-start="526">Webots 使用 ODE 物理引擎（並可切換其他引擎），提供：</p>
-<p></p>
-<p data-end="569" data-start="561">重力、摩擦、碰撞</p>
-<p></p>
-<p data-end="582" data-start="572">關節、平台、驅動馬達</p>
-<p></p>
-<p data-end="618" data-start="585">真實物理動力模擬<br data-end="596" data-start="593"/>適用於自走車、機械手臂、類人機器人、飛行器。</p>
-<hr data-end="623" data-start="620"/>
-<p data-end="671" data-start="649"><em>3. 可視化3D編輯器</em></p>
-<p data-end="671" data-start="649">可在 GUI 中輕鬆建立 3D 場景，包括：</p>
-<p></p>
-<p data-end="676" data-start="674">地形</p>
-<p></p>
-<p data-end="682" data-start="679">建築物</p>
-<p></p>
-<p data-end="688" data-start="685">障礙物</p>
-<p></p>
-<p data-end="696" data-start="691">道路、標誌</p>
-<p></p>
-<p data-end="706" data-start="699">光源、天空環境</p>
-<p data-end="721" data-start="708">拖拉方式建立場景十分直觀。</p>
-<hr data-end="726" data-start="723"/>
-<p data-end="761" data-start="747"><em>4. 跨語言控制</em></p>
-<p data-end="761" data-start="747">你可使用以下語言撰寫控制器：</p>
-<p></p>
-<p data-end="779" data-start="764"><em>Python（最常用）</em></p>
-<p></p>
-<p data-end="789" data-start="782">C / C++</p>
-<p></p>
-<p data-end="796" data-start="792">Java</p>
-<p></p>
-<p data-end="805" data-start="799">MATLAB</p>
-<p></p>
-<p data-end="836" data-start="808">ROS (Robot Operating System)</p>
-<hr data-end="841" data-start="838"/>
-<p data-end="884" data-start="867"><em>5. 與ROS完整整合</em></p>
-<p data-end="884" data-start="867">支援 ROS1、ROS2，可搭配：</p>
-<p></p>
-<p data-end="891" data-start="887">Nav2</p>
-<p></p>
-<p data-end="906" data-start="894">Slam Toolbox</p>
-<p></p>
-<p data-end="933" data-start="909">RViz<br data-end="916" data-start="913"/>讓研究者能使用真實機器人軟體套件。</p>
-<p data-end="884" data-start="867"><em><strong></strong></em></p>
-<p data-end="884" data-start="867"><em><strong>如何進行場景模擬？</strong></em></p>
-<p data-end="884" data-start="867"><em>Step1 - 建立或開啟一個世界(*.wbt)</em></p>
-<p></p>
-<p data-end="1031" data-start="999">打開 Webots<span> </span><em>→<span> </span><code data-end="1017" data-start="1011">File</code><span> </span>→<span> </span><code data-end="1031" data-start="1020">New World</code></em></p>
-<p></p>
-<p data-end="1043" data-start="1034">或開現有範例，如：</p>
-<p></p>
-<p data-end="1072" data-start="1048"><em>robotics → mobile robots</em></p>
-<p></p>
-<p data-end="1102" data-start="1077"><em>manipulation → robot arms</em></p>
-<hr data-end="1107" data-start="1104"/>
-<p data-end="1180" data-start="1133"><em>Step2 - 在場景中加入物件</em></p>
-<p data-end="1180" data-start="1133">按右側<span> </span><em data-end="1173" data-start="1137">Add → Bot → Obstacle → Environment</em><br data-end="1176" data-start="1173"/>可加入：</p>
-<p></p>
-<p data-end="1202" data-start="1183">地面（Floor / Terrain）</p>
-<p></p>
-<p data-end="1214" data-start="1205">桌子、箱子等障礙物</p>
-<p></p>
-<p data-end="1222" data-start="1217">機器人模型</p>
-<p></p>
-<p data-end="1242" data-start="1225">感測器（Lidar、Camera）</p>
-<p></p>
-<p data-end="1250" data-start="1245">光源、天空</p>
-<p data-end="1180" data-start="1133"><strong></strong></p>
-<hr data-end="1255" data-start="1252"/>
-<p data-end="1317" data-start="1290"><em>Step3 - 加入控制器(controller)</em></p>
-<p data-end="1317" data-start="1290">每個機器人都必須綁定一個 controller 程式：</p>
-<p></p>
-<p data-end="1350" data-start="1321">在 Robot 節點中找到<em><span> </span><code data-end="1347" data-start="1335">controller</code><span> </span></em>欄位</p>
-<p></p>
-<p data-end="1376" data-start="1354">選擇<em><span> </span><code data-end="1362" data-start="1357">new</code><span> </span></em>建立<em><span> </span>Python</em><span> </span>控制器</p>
-<p></p>
-<p data-end="1407" data-start="1380">Webots 會建立<span> </span><em><code data-end="1396" data-start="1391">.py</code></em><span> </span>檔並自動與機器人連結</p>
-<p data-end="1317" data-start="1290"></p>
-<hr data-end="1412" data-start="1409"/>
-<p><em>Step4 - 執行模擬</em></p>
-<p>按 播放鍵<strong data-end="1447" data-start="1438"> ▶</strong></p>
-<p>控制器開始執行，機器人會依你的程式運作</p>
-<p></p>
-<p data-end="1491" data-start="1472">可隨時修改場景、調整物理參數、紀錄影片</p>
-<p data-end="884" data-start="867"><em><strong>如何用 Python 進行控制系統設計？</strong></em></p>
-<p data-end="1554" data-start="1524">Webots 提供 Python API，以下示範基本流程：</p>
-<p data-end="884" data-start="867"><em>Step1 - 匯入webots API</em></p>
-<p data-end="884" data-start="867"><em></em></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from controller import Robot</pre>
-<p><em>Step2 - 初始化機器人</em><em></em></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">robot = Robot()
-timestep = int(robot.getBasicTimeStep())</pre>
-<p data-end="884" data-start="867"><em>Step3 - 取得馬達與感測器</em></p>
-<p data-end="884" data-start="867">例如控制輪式機器人:</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">left_motor = robot.getDevice('left wheel motor')
-right_motor = robot.getDevice('right wheel motor')
- 
-left_motor.setPosition(float('inf'))  # velocity mode
-right_motor.setPosition(float('inf'))
-</pre>
-<div class="line number1 index0 alt2"><code class="py plain"> </code></div>
-<div class="line number5 index4 alt2"><code class="py plain"><em>開啟距離感測器：</em></code></div>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">ds = robot.getDevice('ds0')
-ds.enable(timestep)</pre>
-<p data-end="884" data-start="867"><em>Step4 - 主控制迴圈(控制系統核心)</em></p>
-<div>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">while robot.step(timestep) != -1:
-    distance = ds.getValue()
- 
-    # 簡單避障邏輯
-    if distance &lt; 800:
-        left_motor.setVelocity(-2.0)
-        right_motor.setVelocity(2.0)
-    else:
-        left_motor.setVelocity(4.0)
-        right_motor.setVelocity(4.0)</pre>
-</div>
-<p><em> </em></p>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="533" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/_kpPpBeerBE" title="41323143 - 2025 電腦輔助設計與實習期末考週 2a 題目二" width="1000"></iframe></p><br />plotter 操作影片 << <a href='plotter 操作影片.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
